# c-slib-cmake

./: .bocan.yaml  .gitignore  .tmuxp.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: CONTRIBUTING.md
Template-App/: CMakeLists.txt
Template-App/src/: main.c
Template-Core/: CMakeLists.txt
Template-Core/src/: ModuleA.c  ModuleA.h  ModuleA.test.c
scripts/: run-debug.sh  run-release.sh
source/template-app/: CMakeLists.txt
source/template-app/source/: main.c
source/template-core/: CMakeLists.txt
source/template-core/source/: module_a.c  module_a.h  module_a.test.c
